--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 
-<app-reusable-mat-table [dataSource]="getTableData_prsnldtls$" [columnName]="myColumns1" (onAction)="onActionMatTable($event)"></app-reusable-mat-table>
-<app-reusable-mat-table [dataSource]="getTableData_prsnldtls$" [columnName]="myColumns1" (onAction)="onActionMatTable($event)"></app-reusable-mat-table>
+<app-reusable-mat-table [dataSource]="getTableData_periodicInfo$" [columnName]="myColumns1" (onAction)="onActionMatTable($event)"></app-reusable-mat-table>
+<app-reusable-mat-table [dataSource]="getTableData_prsnldtls$" [columnName]="myColumns2" (onAction)="onActionMatTable($event)"></app-reusable-mat-table>
